--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
   "presets": [
-    ["@babel/preset-env", { "modules": "auto" }],
-    "@babel/preset-react"
-  ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "current"
+      },
+      "modules": "auto"
+    }]
+  ]
 }
